--- a/index.html
+++ b/index.html
@@ -55,17 +55,13 @@
         <h4>Digi-socio-afición</h4>
         <h1>Mateacitta Places</h1>
         <p>
-          Hola! Soy Mattea! <br />
-          Estoy aqui para hacer de tus experiencias interactivas virtuales un
-          sitio para descansar <br />
-          Y de paso darse un chapuzon en un buen relax con geniales y grandes
-          dosis de tes y mates en lugares relajantes de series-laridad. In la
-          citta!
+          Hola! Soy Mattea! Estoy aqui para hacer de tus experiencias
+          interactivas virtuales un sitio para descansar. Y de paso darse un
+          chapuzon en un buen relax con geniales y grandes dosis de tes y mates
+          en lugares relajantes de series-laridad. In la citta!
         </p>
         <a href="#">Matesitios</a>
-        <a href="#" class="multimedia"
-          ><i class="ri-play-fill"></i>Interaseries</a
-        >
+        <a href="#" class="videos"><i class="ri-play-fill"></i>Interaseries</a>
       </div>
 
       <div class="hero-img">
