--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         <h4>Digi-socio-afición</h4>
         <h1>Mateacitta Places</h1>
         <p>
-          Hola! Soy Mattea! Estoy aqui para hacer de tus experiencias
+          ¡Hola! ¡Soy Mattea! Estoy aqui para hacer de tus experiencias
           interactivas virtuales un sitio para descansar. Y de paso darse un
           chapuzon en un buen relax con geniales y grandes dosis de tes y mates
-          en lugares relajantes de series-laridad. In la citta!
+          en lugares relajantes de series-imensionalidad. ¡A la citta!
         </p>
         <a href="#">Matesitios</a>
         <a href="#" class="videos"><i class="ri-play-fill"></i>Interaseries</a>
@@ -68,5 +68,15 @@
         <img src="assets/imgs/taza.jpg" alt="Logo Mateaccitta" />
       </div>
     </section>
+
+    <div class="icons">
+      <a href="#"><i class="ri-linkedin-line"></i></a>
+      <a href="#"><i class="ri-youtube-line"></i></a>
+      <a href="#"><i class="ri-behance-line"></i></a>
+    </div>
+
+    <div class="scroll-down">
+      <a href="#"><i class="ri-arrow-down-s-fill"></i></a>
+    </div>
   </body>
 </html>
