--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
     </section>
 
     <div class="icons">
-      <a href="#"><i class="ri-linkedin-line"></i></a>
+      <a href="#"><i class="ri-github-line"></i></a>
       <a href="#"><i class="ri-youtube-line"></i></a>
       <a href="#"><i class="ri-behance-line"></i></a>
     </div>
 
     <div class="scroll-down">
-      <a href="#"><i class="ri-arrow-down-s-fill"></i></a>
+      <a href="#"><i class="ri-arrow-down-s-line"></i></a>
     </div>
   </body>
 </html>
